Refactor
- saveBill endpoint
- remove DebtService
- etc..